--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@huggingface/inference": "1",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
+    "@qdrant/js-client-rest": "^1.5.0",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "chromadb": "^1.5.9",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "langchain": "^0.0.157",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
@@ -27,6 +29,11 @@
     "react-markdown": "^8.0.7",
     "remark-gfm": "^3.0.1",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.4"
   }
 }
