--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-grid-layout": "^1.4.3"
+    "react-grid-layout": "^1.4.3",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
