--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tomtom-international/web-sdk-maps": "^6.25.0",
     "framer-motion": "^10.16.12",
-    "next": "14.0.3",
+    "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
