--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tomtom-international/web-sdk-maps": "^6.25.0",
     "framer-motion": "^10.16.12",
+    "langchain": "^0.0.206",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
