--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tomtom-international/web-sdk-maps": "^6.25.0",
     "framer-motion": "^10.16.12",
     "langchain": "^0.0.206",
+    "mongodb": "^5.9.2",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
