feat: add sentry

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@huggingface/inference": "^2.6.4",
+    "@sentry/nextjs": "^7.91.0",
     "@tomtom-international/web-sdk-maps": "^6.25.0",
     "framer-motion": "^10.16.12",
     "langchain": "^0.0.206",
